--- a/package.json
+++ b/package.json
@@ -22,14 +22,16 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.11.0",
+  "packageManager": "pnpm@10.20.0",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.6",
     "drizzle-zod": "^0.8.3",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "jose": "^6.1.0",
     "pg": "^8.16.3",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.2",
@@ -38,6 +40,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.6",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^24.8.1",
     "@types/pg": "^8.15.5",
     "@types/supertest": "^6.0.3",
