feat: Add auto-sync script for LabLink to Obsidian integration
- Implemented `auto-sync-to-obsidian.sh` to synchronize LabLink project files with Obsidian.
- Created a structured directory for tools and templates to enhance study workflows.
- Added various templates for code analysis, flow tracing, learning sessions, and project mapping.
- Developed a comprehensive Warp workflow for syncing and managing study sessions.
- Introduced commands for quick sync, study session creation, and sync status checks.
- Enhanced README documentation to guide users through setup and usage of new features.

--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,9 @@ Thumbs.db
 test-results/
 playwright-report/
 playwright/.cache/
+
+# Tools and temporary files
+tools/obsidian-integration/temp/
+tools/warp-workflows/temp/
+*.tmp
+src/test-file.js
