--- a/package.json
+++ b/package.json
@@ -36,17 +36,21 @@
     "jose": "^6.1.0",
     "pg": "^8.16.3",
     "pino": "^10.1.0",
-    "pino-pretty": "^13.1.2",
+    "swagger-ui-express": "^5.0.1",
     "undici": "^7.16.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.6",
     "@types/bcrypt": "^6.0.0",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.5",
     "@types/node": "^24.8.1",
     "@types/pg": "^8.15.5",
     "@types/supertest": "^6.0.3",
+    "@types/swagger-ui-express": "^4.1.8",
     "drizzle-kit": "^0.31.5",
+    "pino-pretty": "^13.1.2",
     "rimraf": "^6.0.1",
     "supertest": "^7.1.4",
     "tsx": "^4.20.6",
