feat: Implement health check API and corresponding E2E tests
chore: Remove tsconfig.dev.json and update tsconfig.json for cleaner configuration

chore: Update vitest.config.ts to use node:path for imports and simplify coverage exclusions

chore: Add .env.example for environment variable configuration

docs: Add CONTRIBUTING.md with guidelines for project contributions

docs: Complete HOUSEKEEPING-COMPLETED.md with project status and verification results

docs: Simplify project structure in SIMPLIFICATION-COMPLETE.md

docs: Update TODO.md with completed and pending tasks

docs: Create WARP.md for workflow integration with Obsidian

docs: Enhance project overview in index.md with quick start and API documentation

--- a/.gitignore
+++ b/.gitignore
@@ -96,10 +96,10 @@ temp/
 ehthumbs.db
 Thumbs.db
 
-# Database
-*.sqlite
-*.sqlite3
-*.db
+# Database (PostgreSQL dumps and backups)
+*.sql
+*.dump
+*.backup
 
 # Drizzle Kit
 .drizzle/
@@ -153,21 +153,14 @@ pino-logs/
 .idea/
 *.swp
 *.swo
-*~
 
-# Mac OS
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-
-# Windows
+# Windows OS files
 ehthumbs.db
 Thumbs.db
 desktop.ini
+*.lnk
 
-# Linux
+# Linux (si colaboras con usuarios Linux)
 *~
 
 # Package managers
@@ -179,11 +172,12 @@ pnpm-lock.yaml
 .github/workflows/*.local.yml
 .github/secrets/
 
-# Database files
-*.sqlite
-*.sqlite3
-*.db
-*.db-journal
+# PostgreSQL files
+*.sql
+*.dump
+*.backup
+pg_dump_*
+postgres_backup_*
 
 # Backup files
 *.bak
