feat: refactor database schema and enums; update user roles and equipment status handling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,5 +22,8 @@
   "bookmarks.saveBookmarksInProject": true,
   "bookmarks.navigateThroughAllFiles": true,
   "bookmarks.wrapNavigation": true,
-  "bookmarks.alwaysUseLabel": true
+  "bookmarks.alwaysUseLabel": true,
+  "cSpell.words": [
+    "bigserial"
+  ]
 }
