--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,8 +43,8 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - name: Run database migrations
-        run: pnpm db:migrate
+      - name: Setup database schema
+        run: pnpm db:push
         env:
           DATABASE_URL: postgresql://testuser:testpass@localhost:5432/lablink_test
 
