--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"test:watch": "vitest",
 		"db:gen": "drizzle-kit generate",
 		"db:migrate": "drizzle-kit migrate",
+		"db:push": "drizzle-kit push",
 		"db:studio": "drizzle-kit studio",
 		"db:pull": "drizzle-kit introspect",
 		"format": "biome format --write .",
