refactor: update linter rules to enforce error on noExplicitAny and enable error formatting

--- a/biome.json
+++ b/biome.json
@@ -14,13 +14,13 @@
 				"useExportType": "error"
 			},
 			"suspicious": {
-				"noExplicitAny": "warn"
+				"noExplicitAny": "error"
 			}
 		}
 	},
 	"formatter": {
 		"enabled": true,
-		"formatWithErrors": false,
+		"formatWithErrors": true,
 		"indentStyle": "tab",
 		"indentWidth": 2,
 		"lineWidth": 100
