refactor: enhance linter rules for improved code quality and consistency

--- a/biome.json
+++ b/biome.json
@@ -7,14 +7,22 @@
 			"recommended": true,
 			"correctness": {
 				"noUnusedImports": "error",
-				"noUnusedVariables": "error"
+            "noUnusedVariables": "error",
+            "noConstantCondition": "error",
+            "useExhaustiveDependencies": "warn"
 			},
 			"style": {
 				"useImportType": "error",
-				"useExportType": "error"
+				"useExportType": "error",
+				"useConst": "error",
+				"useTemplate": "error",
+				"noNamespace": "error"
 			},
 			"suspicious": {
-				"noExplicitAny": "error"
+						"noExplicitAny": "error",
+            "noArrayIndexKey": "error",
+            "noDuplicateJsxProps": "error",
+            "noDebugger": "warn"
 			}
 		}
 	},
